# sync_stream_3d

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  justfile  main.py  pyproject.toml  visualizer.py
.github/workflows/: ci.yaml
syncstream/: chunker.py  constants.py  converter.py  dataset.py  schemas.py  tagging.py  utils.py  validation.py
tests/: conftest.py  test_pipeline_integration.py  test_pipeline_unit.py
